--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Portfolio",
-  "name": "Hanzla's Portfolio",
+  "name": "Yogesh's Portfolio",
   "description": "A passionate Full Stack Web Developer and Mobile App Developer.",
     "icons": [
       {
